--- a/src/index.css
+++ b/src/index.css
@@ -24,12 +24,17 @@ header {
 }
 
 footer {
-    text-align: center;
-    background-color: deepskyblue;
-    color: white;
-    position: absolute;
-    width: 100%;
+    background-color: #00bfff;
+    color: #fff;
     height: 50px;
+    position: fixed;
+    text-align: center;
+    width: 100%;
+    bottom: 0;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
 }
 
 .footerP {
@@ -48,7 +53,7 @@ p {
 }
 
 img {
-    margin-left: 20px;
+    margin-left: 10px;
 }
 
 li {
@@ -96,6 +101,7 @@ li {
 .card-title {
     padding-top: 4px;
     text-align: center;
+    background-color: rgb(230, 229, 229);
 }
 
 .date {
@@ -110,8 +116,24 @@ li {
     perspective: 1000px;
 }
 
+.flip-card-post {
+    background-color: transparent;
+    width: 310px;
+    height: 340px;
+    perspective: 1000px;
+}
+
 /* This container is needed to position the front and back side */
 .flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+}
+
+.flip-card-post-inner {
     position: relative;
     width: 100%;
     height: 100%;
@@ -125,9 +147,24 @@ li {
     transform: rotateY(180deg);
 }
 
+.flip-card-post:hover .flip-card-post-inner {
+    transform: rotateY(180deg);
+}
+
 /* Position the front and back side */
 .flip-card-front,
 .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    /* Safari */
+    backface-visibility: hidden;
+}
+
+/* Position the front and back side */
+.flip-card-post-front,
+.flip-card-post-back {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -151,5 +188,19 @@ li {
 
 .project-img {
     width: 100%;
+    height: 75%;
     margin-left: 0px;
+}
+
+#check {
+    list-style-type: none;
+}
+
+.contact-me-tag {
+    font-size: x-large;
+}
+
+#kev-img {
+    margin: 15px;
+    width: 47%;
 }
